fixed text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -763,7 +763,7 @@ html {
     background-size: 90%;
   }
   .first-blog {
-    text-align: center;
+    text-align: left;
   }
   .first-blog__text-wrapper {
     padding: 0;
@@ -777,7 +777,7 @@ html {
   }
   .about-us__wrapper {
     padding-right: 0;
-    justify-content: center;
+    justify-content: left;
   }
   .about-us__list {
     padding-left: 5rem;
@@ -791,12 +791,12 @@ html {
     background-size: 90%;
   }
   .second-blog__wrapper {
-    justify-content: center;
+    justify-content: left;
     padding-left: 0;
   }
   .second-blog__text-wrapper {
     padding-left: 0;
-    text-align: center;
+    text-align: left;
   }
   .primary-text {
     font-weight: 400;
@@ -805,7 +805,7 @@ html {
     font-weight: 600;
     font-size: 3rem;
     background: rgba(0, 0, 0, 0.377);
-    border-radius: 30px;
+    border-radius: 10px;
     padding: 1rem;
   }
 }
